# hanni

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml
scripts/: build-proxy.ps1  build-proxy.sh
socks5-proxy/: Cargo.toml
socks5-proxy/src/: main.rs
src/: index.html  main.js  preload.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs
