[package]
name = "socks5-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "socks5-proxy"
path = "src/main.rs"

[dependencies]
fast-socks5 = "1.0.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
structopt = "0.3"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0.100"
